# rust-auth

./: .gitignore  .gitmessage  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  mutants.toml  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  mutants.yml  scorecard.yml
.husky/: commit-msg  pre-commit  pre-push
bindings/bymax-auth-wasm/: Cargo.toml  check-wasm-size.sh
bindings/bymax-auth-wasm/src/: jwt_edge.rs  lib.rs
bindings/bymax-auth-wasm/tests/: web.rs
crates/bymax-auth/: Cargo.toml
crates/bymax-auth-axum/: Cargo.toml
crates/bymax-auth-axum/src/: delivery.rs  dto.rs  lib.rs  middleware.rs  rate_limit.rs  response.rs  router.rs  state.rs  test_support.rs  validation.rs  ws.rs
crates/bymax-auth-axum/src/extractors/: auth_user.rs  current_user.rs  mfa.rs  mod.rs  optional.rs  platform.rs  role.rs  self_or_admin.rs  status.rs
crates/bymax-auth-axum/src/routes/: auth.rs  invitations.rs  mfa.rs  mod.rs  oauth.rs  password_reset.rs  platform.rs  platform_mfa.rs  sessions.rs
crates/bymax-auth-axum/tests/: adapter.rs  redis_e2e.rs
crates/bymax-auth-axum/tests/common/: mod.rs
crates/bymax-auth-client/: Cargo.toml
crates/bymax-auth-client/src/: lib.rs
crates/bymax-auth-client/tests/: client_e2e.rs
crates/bymax-auth-core/: Cargo.toml
crates/bymax-auth-core/src/: context.rs  error.rs  lib.rs
crates/bymax-auth-core/src/config/: mod.rs  profiles.rs  resolvers.rs  validate.rs
crates/bymax-auth-core/src/engine/: builder.rs  mod.rs
crates/bymax-auth-core/src/providers/: google.rs  mod.rs  reqwest_client.rs
crates/bymax-auth-core/src/services/: adapter_api.rs  brute_force.rs  mod.rs  oauth.rs  otp.rs  password.rs  platform.rs  session.rs  token_manager.rs
crates/bymax-auth-core/src/services/auth/: detached.rs  email_verification.rs  invitation.rs  login.rs  mod.rs  password_reset.rs  register.rs  session_ops.rs
crates/bymax-auth-core/src/services/mfa/: challenge.rs  manage.rs  mod.rs  setup.rs  tests.rs
crates/bymax-auth-core/src/testing/: mod.rs
crates/bymax-auth-core/src/traits/: email.rs  hooks.rs  http.rs  mod.rs  oauth.rs  repository.rs  store.rs
crates/bymax-auth-core/tests/: engine_assembly.rs
crates/bymax-auth-crypto/: Cargo.toml
crates/bymax-auth-crypto/benches/: crypto.rs
crates/bymax-auth-crypto/src/: aead.rs  compare.rs  error.rs  lib.rs  mac.rs  token.rs  totp.rs
crates/bymax-auth-crypto/src/password/: argon2.rs  mod.rs  phc.rs  scrypt.rs  tests.rs
crates/bymax-auth-jwt/: Cargo.toml
crates/bymax-auth-jwt/src/: error.rs  hs256.rs  keys.rs  lib.rs
crates/bymax-auth-redis/: Cargo.toml
crates/bymax-auth-redis/src/: error.rs  keys.rs  lib.rs  pool.rs  script.rs
crates/bymax-auth-redis/src/lua/: brute_force_incr.lua  invalidate_user_sessions.lua  mfa_challenge.lua  otp_verify.lua  refresh_rotate.lua  revoke_family.lua  session_revoke.lua
crates/bymax-auth-redis/src/stores/: brute_force.rs  mfa.rs  mod.rs  oauth.rs  otp.rs  session.rs  single_use.rs  ws_ticket.rs
crates/bymax-auth-redis/tests/: mfa_lifecycle_e2e.rs  mfa_store_e2e.rs  oauth_state_store_e2e.rs  platform_identity_e2e.rs  redis_stores.rs
crates/bymax-auth-redis/tests/common/: mod.rs
crates/bymax-auth-types/: Cargo.toml
crates/bymax-auth-types/src/: claims.rs  constants.rs  domain.rs  error.rs  lib.rs  results.rs
crates/bymax-auth-types/tests/: error_catalog.rs  ts_export.rs
crates/bymax-auth/src/: lib.rs
docs/: RELEASE.md  development_plan.md  technical_specification.md
docs/tasks/: phase-00-foundation-workspace.md  phase-01-crypto-crate.md  phase-02-types-jwt-crates.md  phase-03-core-engine.md  phase-04-local-auth-flows.md  phase-05-redis-stores.md  phase-06-stateful-services.md  phase-07-mfa-totp.md  phase-08-oauth.md  phase-09-platform-admin.md  phase-10-axum-adapter.md  phase-11-wasm-npm-client.md  phase-12-release-supply-chain.md
examples/: Cargo.toml
examples/axum-mfa/: Cargo.toml  README.md
examples/axum-mfa/src/: main.rs
examples/axum-minimal/: Cargo.toml  README.md
examples/axum-minimal/src/: main.rs
examples/axum-oauth-google/: Cargo.toml  README.md
examples/axum-oauth-google/src/: main.rs
examples/bymax-live-auth/: Cargo.toml  README.md
examples/bymax-live-auth/src/: main.rs
examples/e2e/: README.md  global-setup.ts  global-teardown.ts  harness.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
examples/e2e-backend/: Cargo.toml
examples/e2e-backend/src/: main.rs
examples/e2e/tests/: auth-flow.spec.ts
examples/nextjs/: README.md  middleware.ts  next-env.d.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
examples/nextjs/app/: layout.tsx  page.tsx
examples/nextjs/app/api/auth/client-refresh/: route.ts
examples/nextjs/app/api/auth/logout/: route.ts
examples/nextjs/app/auth/[...path]/: route.ts
examples/nextjs/app/auth/silent-refresh/: route.ts
examples/nextjs/app/dashboard/: page.tsx
examples/nextjs/app/login/: page.tsx
examples/react-vite/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/react-vite/src/: App.tsx  auth.ts
examples/smoke-crate/: Cargo.toml  README.md
examples/smoke-crate/src/: lib.rs
examples/smoke-crate/tests/: smoke.rs
examples/smoke-npm/: README.md  package-lock.json  package.json  smoke.ts  tsconfig.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: jwt_decode.rs  password_phc.rs  totp_base32.rs
scripts/: check-invariants.sh  dependency-budget.sh
supply-chain/: audits.toml  config.toml
